--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
         <!-- Aqui deberia ir el navbar -->
     </nav>
     <main>
-        <!-- Aqui deberia ir el contenido -->
+        <h2>
+            Soy un super contenido :D
+        </h2>
     </main>
     <footer>
         <!-- Aqui deberia ir el pie de pagina -->
