--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         </h2>
     </main>
     <footer>
-        <!-- Aqui deberia ir el pie de pagina -->
+        <h2>Soy el pie de pagina</h2>
     </footer>
 </body>
 
