UPDATE footer content

--- a/index.html
+++ b/index.html
@@ -19,6 +19,12 @@
     </main>
     <footer>
         <h2>Soy el pie de pagina</h2>
+        <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur eius nobis nostrum laborum dolores
+            voluptatum culpa delectus voluptas dignissimos dolore, praesentium eveniet! Quos incidunt aliquid distinctio
+            adipisci. Magni culpa, sunt dolores, optio tenetur perspiciatis unde cumque soluta sapiente minus eligendi?
+            Quas minima facilis id ullam ipsam ad repellat possimus recusandae.
+        </p>
     </footer>
 </body>
 
